[package]
name = "rnet"
version = "0.1.0"
authors = ["weiwei3.wang <weiwei3.wang@ly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3.4", features = ["full", "tracing"]}
tokio-util = { version = "0.5.0", features = ["full"] }
tracing = {version = "0.1.22"}
tracing-subscriber = { version = "0.2.15", default-features = false, features = ["fmt", "ansi", "env-filter", "chrono", "tracing-log"] }
bytes = {version = "0.6.0"}
futures = {version = "0.3.8"}